feat: add service layer tests